Fixed some issues on mobile.

--- a/style.css
+++ b/style.css
@@ -425,7 +425,7 @@ For Smartphones and Tablets
 Switches at 480px width
 =================================== */
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 620px){
 body{
 font-size:1.4em;
 margin:20px
@@ -553,10 +553,10 @@ top:10px;right:10px/* Position relative to header */
 Custom CSS for smartphones and tablets
 =================================== */
 
-/*  Theme switcher on mobile
+/*  Theme switcher on mobile + hide top button
 ------------------------------ */
 
-@media (max-width: 480px) {
+@media (max-width: 620px) {
 
     .header-inner {
       position: relative; 
@@ -568,5 +568,11 @@ Custom CSS for smartphones and tablets
       left: auto;
       right: 50px; 
     }
+
+    #pagetop{
+      display:none;
+      }
   
   }
+
+ 
